:bug: fix: fixing bug in gap

--- a/src/assets/components/OurService/OurService.css
+++ b/src/assets/components/OurService/OurService.css
@@ -40,7 +40,7 @@
     padding: 100px 60px;
     align-items: center;
     justify-content: center;
-    margin-top: 15px;
+    margin-top: 25px;
 }
 
 .tagTwoBox {
